# Rust-Lang-Analysis

./: .gitignore  README.md  sources_map.xmind  template.txt
core/: README.md  error.md
core/num/: error.md  f32.md  int_macros.md
core/num/shells/: int_macros.md
core/ops/: arith.md
core/types/num/: int_macros.md
core/types/num/shells/: int_macros.md
design_core/: README.md  default.md  error.md  option.md
design_core/ascii/: README.md
design_core/fmt/: README.md
design_core/num/: README.md
design_core/ops/: README.md
practice/: Cargo.toml
practice/src/: main.rs
practice/src/practice/: error.rs  impl_arr.rs  impl_tuple.rs  match_judge.rs  mod.rs  non_binding.rs
practice/src/tests/: error.rs
technical_term/: core-knowledge.md  technical_term.md
tests_rust_lang/: Cargo.toml
tests_rust_lang/lang_core/: Cargo.toml
tests_rust_lang/lang_core/src/: error.rs  lib.rs
tests_rust_lang/lang_core/src/my_core/: any.rs  default.rs  internal_macros.rs  mod.rs  option.rs
tests_rust_lang/lang_core/src/my_core/ascii/: ascii_char.rs  mod.rs
tests_rust_lang/lang_core/src/my_core/convert/: mod.rs  num.rs
tests_rust_lang/lang_core/src/my_core/fmt/: mod.rs  rt.rs
tests_rust_lang/lang_core/src/my_core/num/: diy_float.rs  error.rs  f32.rs  f64.rs  int_log10.rs  int_macros.rs  mod.rs  my_i8.rs  my_impl_i8.rs
tests_rust_lang/lang_core/src/my_core/ops/: arith.rs  (+1 more)
tests_rust_lang/lang_tests/: Cargo.toml
tests_rust_lang/lang_tests/src/: main.rs
tests_rust_lang/lang_tests/src/core_tests/: mod.rs  num_error_parseIntError.rs  num_shells_int_macros.rs
(+14 files in other folders)
